--- a/index.html
+++ b/index.html
@@ -5,26 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pixel to Rem Converter</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="main-container">
       <h1>PX to REM <span>Converter</span></h1>
       <div class="conv-cont">
-        <div class="input">
-          <input class="input-field" type="number" />
-          <label class="disp-input" for="">px</label>
+        <div class="conv-group">
+          <div class="input">
+            <input class="input-field" type="number" />
+            <label class="disp-input" for="">px</label>
+          </div>
+
+          <button class="swtch-btn">
+            <i class="bi bi-arrow-left-right"></i>
+          </button>
+
+          <div class="output">
+            <input class="output-field" type="text" disabled />
+            <label class="disp-output" for="">rem</label>
+          </div>
+
+          <button class="copy-btn">copy</button>
         </div>
-
-        <button class="swtch-btn">
-          <i class="bi bi-arrow-left-right"></i>
-        </button>
-
-        <div class="output">
-          <input class="output-field" type="text" disabled />
-          <label class="disp-output" for="">rem</label>
-        </div>
-
-        <button class="copy-btn">copy</button>
       </div>
     </div>
 
